Home page designed and about page designed

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -1,11 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tangail Polytechnic Institute</title>
+    <link rel="stylesheet" href="./home/style.css">
 </head>
+
 <body>
-    <h1>Hello</h1>
+
+
+
+    <nav class="navbar">
+        <a href="#" class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a>
+        <ul class="nav-links">
+            <li><a href="#">Home</a></li>
+            <li><a href="../../tpi/pages/about.html">About</a></li>
+            <li><a href="#">Electrical</a></li>
+            <li><a href="#">Civil</a></li>
+            <li><a href="#">Mechanical</a></li>
+            <li><a href="#">Construction</a></li>
+            <li><a href="#">Telecommunication</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <img class="bg-image" src="../../tpi/images/301777316_379201554417488_7513436252949869093_n.jpg" alt="Snow"
+            style="width:100%;">
+        <div class="centered">
+            <main>
+                <section class="about" style="text-align: center;">
+                    <br>
+                    <h1 class="bg-text">About Us</h1>
+                    <hr>
+                    <br>
+                    <p>টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট বাংলাদেশের টাঙ্গাইল জেলার একটি কারিগরি শিক্ষাপ্রতিষ্ঠান। এটি ১৯৯১
+                        সালে
+                        স্থাপিত হয়। এটি ১৯৯১ সালে প্রতিষ্ঠিত হয়। প্রথম বর্ষে মাত্র 40 জন ছাত্র-ছাত্রী নিয়ে ক্লাস শুরু
+                        হয়
+                        ইলেকট্রিক্যাল টেকনোলজিতে পরবর্তীতে এখানে আরো ৬টি কোর্স চালু করা হয়। বর্তমানে মোট ৭টি টেকনোলজি
+                        নিয়ে
+                        চলছে টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট। উক্ত প্রতিষ্ঠানটি টাংগাইল এর নতুন বাসস্ট্যান্ড নামক জায়গা
+                        থেকে
+                        উত্তরে হেটে ৫ মিনিট দুরত্বে অবস্থিত। টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট এর ছাত্রদের জন্য ১টি এবং
+                        ছাত্রীদের
+                        জন্য ১টি আবাসিক ছাত্রাবাস রয়েছে।
+                    </p>
+                    <br>
+                    <br>
+                    <h3 class="bg-text">টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট বিভাগসমূহ : </h3>
+
+                    <hr>
+                    <br>
+                    <ul>
+                        <li>Electrical Technology</li>
+                        <li>Civil Engineering Technology</li>
+                        <li>Mechanical Engineering Technology</li>
+                        <li>Computer Technology</li>
+                        <li>Electronics Technology</li>
+                    </ul>
+                </section>
+
+                <section class="admissions">
+
+                    <h2 class="bg-text" style="text-align: center;">Admissions</h2>
+
+                    <hr>
+                    <br>
+
+                    <p>Tangail Polytechnic Institute offers admission to students who have passed the Secondary School
+                        Certificate (SSC) examination with a minimum grade point average (GPA) of 3.00. The admission
+                        process is
+                        highly competitive and only the most qualified students are selected.</p>
+
+                    <p>For more information on admissions, please visit our website or contact our admissions office.
+                    </p>
+                </section>
+
+                <section class="contact" style="text-align: center;">
+
+                    <h2 class="bg-text">Contact Us</h2>
+
+                    <hr>
+                    <br>
+                    <p>Tangail Polytechnic Institute<br>
+                        0.6 kilometers (0.37 mi) north of Tangail center new bus terminal<br>
+                        Eastern side of Tangail - Mymensingh road<br>
+                        Tangail, Bangladesh<br>
+                        Phone: +880-2-9123-4567<br>
+                        Email: info@tpi.edu.bd</p>
+                </section>
+            </main>
+        </div>
+    </div>
+    <div style="text-align: center;">
+        <br>
+        <h1 class="bg-text" style="color: white;">See our videos</h1>
+        <hr>
+        <br>
+
+        <iframe width=" 560" height="315" src="https://www.youtube.com/embed/qKTXIfQal-g?si=xZSyfP0NyNr6D46t"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2g9KVAA27fU?si=hH589GOXGXdEUhlm"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/L2i6P79zBU0?si=HZDsU1EDaiZJXnA6"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/a-xGOYKHYWY?si=4Tl-dJ78fynV_Rx_"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/jvKU3JfUSpE?si=zAqvOPCVwb09wX8i"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/EOy27129awA?si=W4FdvOdhxGoKuklT"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+    </div>
+    <footer>
+        <div class="footer-links">
+            <a>Home</a>
+            <a>About Us</a>
+            <a>Services</a>
+            <a>Contact</a>
+        </div>
+        <br>
+        <hr>
+        <div class="footer-social">
+            <a href="https://www.facebook.com/tpigov" target="_blank">Facebook</a>
+            <a target="_blank">Twitter</a>
+            <a target="_blank">Instagram</a>
+        </div>
+        <br>
+        <hr>
+        <div class="footer-options">
+
+            <div>
+                <h3>Quick Links</h3>
+                <a>FAQ</a>
+                <a>Terms of Service</a>
+                <a>Privacy Policy</a>
+            </div>
+            <hr>
+            <div>
+                <h3>Support</h3>
+                <a>Customer Service</a>
+                <a>Contact Us</a>
+            </div>
+            <hr>
+            <div>
+                <h3>Connect With Us</h3>
+                <a>Newsletter</a>
+                <a>Blog</a>
+            </div>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <p>&copy; 2023 Your Website. All Rights Reserved.</p>
+    </footer>
+
 </body>
+
 </html>
