CST deperment Done

--- a/public/cst/pages/cst.html
+++ b/public/cst/pages/cst.html
@@ -4,78 +4,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tangail Polytechnic Institute</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <title>CST Department</title>
+    <link rel="stylesheet" href="../css/cst_style.css">
+    <link rel="stylesheet" href="../../tpi/css/nav.css">
 </head>
 
 <body>
-    <nav class="navbar">
-        <a href="#" class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="../../tpi/pages/about.html">About</a></li>
-            <li><a href="#">Electrical</a></li>
-            <li><a href="#">Civil</a></li>
-            <li><a href="#">Mechanical</a></li>
-            <li><a href="#">Construction</a></li>
-            <li><a href="#">Telecommunication</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </nav>
+    <nav>
+        <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a>
+        <a href="../../home/home.html">Home</a>
+        <a href="../../tpi/pages/about.html">About</a>
+        <a href="#">Electrical</a>
+        <a href="#">Civil</a>
+        <a href="#">Mechanical</a>
+        <a href="#">Construction</a>
+        <a href="#">Telecommunication</a>
+        <a href="#">Contact</a>
+        <a href="../../tpi/pages/teachersInfo.html">Teachers</a>
 
-    <div class="content">
-        <h1>টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট</h1>
+    </nav>
+    <div class="header">
+        <h2>Welcome to Computer Science And Technology</h2>
+        <hr />
     </div>
 
-    <header>
-        <div style="text-align: center;">
-            <img src="../../tpi/images/301777316_379201554417488_7513436252949869093_n.jpg"
-                alt="Tangail Polytechnic Institute">
+    <div class="about-section">
+        <div class="container">
+            <big><b>About CST:</b></big>
+            <p>Computer science and technology have revolutionized our world, shaping the way we live, work, and
+                communicate.
+                From the ubiquitous smartphones in our hands to the cloud-powered systems that run our businesses,
+                computers
+                have become an indispensable part of our daily lives.
+            </p>
+
+            <p>
+                Computer science is the study of computers and computational systems, encompassing the design,
+                development, and
+                analysis of software and hardware. It encompasses a wide range of disciplines, including algorithms,
+                data
+                structures, artificial intelligence, and computer graphics.
+            </p>
+            <p>
+                Technology, on the other hand, refers to the practical application of scientific knowledge to create
+                tangible
+                tools, devices, and systems. It encompasses a vast array of fields, from telecommunications and
+                electronics to
+                medicine and biotechnology.
+            </p>
+
+            <p>The interplay between computer science and technology has fueled innovation and transformed industries
+                across the
+                globe. The advent of personal computers, the rise of the Internet, and the development of mobile devices
+                have
+                all been driven by advancements in computer science and technology.
+            </p>
+            <p>These advancements have had a profound impact on society, enabling global communication, providing access
+                to
+                information, and driving economic growth. They have also transformed industries, from healthcare and
+                education
+                to finance and manufacturing.</p>
+
+            <p>As computer science and technology continue to evolve, we can expect to see even more transformative
+                advancements
+                in the years to come. These advancements will shape the future of our world, impacting our lives in ways
+                we can
+                only begin to imagine.
+            </p>
+            <!-- Other paragraphs go here -->
         </div>
-    </header>
+    </div>
 
-    <main>
-        <section class="about" style="text-align: center;">
-            <h2>About Us</h2>
-            <p>টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট বাংলাদেশের টাঙ্গাইল জেলার একটি কারিগরি শিক্ষাপ্রতিষ্ঠান। এটি ১৯৯১ সালে
-                স্থাপিত হয়। এটি ১৯৯১ সালে প্রতিষ্ঠিত হয়। প্রথম বর্ষে মাত্র ৪০ জন ছাত্র-ছাত্রী নিয়ে ক্লাস শুরু হয়
-                ইলেকট্রিক্যাল টেকনোলজিতে পরবর্তীতে এখানে আরো ৬টি কোর্স চালু করা হয়। বর্তমানে মোট ৭টি টেকনোলজি নিয়ে
-                চলছে টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট। উক্ত প্রতিষ্ঠানটি টাংগাইল এর নতুন বাসস্ট্যান্ড নামক জায়গা থেকে
-                উত্তরে হেটে ৫ মিনিট দুরত্বে অবস্থিত। টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট এর ছাত্রদের জন্য ১টি এবং ছাত্রীদের
-                জন্য ১টি আবাসিক ছাত্রাবাস রয়েছে। </p>
-            <h3>টাঙ্গাইল পলিটেকনিক ইনস্টিটিউট বিভাগসমূহ : </h3>
-            <ul>
-                <li>Electrical Technology</li>
-                <li>Civil Engineering Technology</li>
-                <li>Mechanical Engineering Technology</li>
-                <li>Computer Technology</li>
-                <li>Electronics Technology</li>
-            </ul>
-        </section>
+    <div class="department-section">
+        <div class="container">
+            <big><b>Department Phase:</b></big>
+            <p>There are 2 shifts . One is Morning shift another is Day shift. Each shift contains 1<sup>st</sup> to
+                8<sup>th</sup> semesters. But 8<sup>th</sup> semester is not academic , it's industrial training. But
+                the
+                semester system is like pair system. When even semster is running all the department covers with even
+                and when
+                even pass, then it's opposite. In every semesters there have like hundres of students.Which are divided
+                by 2
+                groups for better management</p>
+            <!-- Other paragraphs go here -->
+        </div>
+    </div>
 
-        <section class="admissions">
-            <h2 style="text-align: center;">Admissions</h2>
-            <p>Tangail Polytechnic Institute offers admission to students who have passed the Secondary School
-                Certificate (SSC) examination with a minimum grade point average (GPA) of 3.00. The admission process is
-                highly competitive and only the most qualified students are selected.</p>
+    <div class="facilities-section">
+        <div class="container">
+            <big><b>Department's Facilities:</b></big>
+            <p>One of the finest department in our Institute is Computer Science and Technology. All necessary
+                instruments like
+                Computer,Projector,Monitor, others peripherals for students are available here. All lab class are eco
+                friendly
+                and suited for students in a good way. There have sufficient computers for students to practice .
+                Teachers are
+                also so welcoming to students . They guide students very sinciarly .
+                There have good connection of internet for serve students . Lab teachers are also helpful and they are
+                active
+                all the time to keeps the lab to a better condition. Security Systems are also good , all lab class ,
+                theory
+                class , even corridor are bind with CCTV camera. In total <b>CST</b> department in Tangail Polytechnic
+                is one of
+                the best department the institute offers.</p>
+            <!-- Other paragraphs go here -->
+        </div>
+    </div>
+    <hr>
 
-            <p>For more information on admissions, please visit our website or contact our admissions office.</p>
-        </section>
+    <br>
+    <div style="text-align: center;">
+        <h1>
+            Deperment's Images
+        </h1>
+    </div>
 
-        <section class="contact" style="text-align: center;">
-            <h2>Contact Us</h2>
-            <p>Tangail Polytechnic Institute<br>
-                0.6 kilometers (0.37 mi) north of Tangail center new bus terminal<br>
-                Eastern side of Tangail - Mymensingh road<br>
-                Tangail, Bangladesh<br>
-                Phone: +880-2-9123-4567<br>
-                Email: info@tpi.edu.bd</p>
-        </section>
-    </main>
+    <div id="cst_img" style="text-align: center;">
+        <img src="../img/Computer Lab.jpg" alt="Computer Lab">
+        <img src="../img/hw.jpg" alt="Computer Lab">
+        <img src="../img/s1.jpg" alt="Computer Lab">
+        <img src="../img/s2.jpg" alt="Computer Lab">
+        <img src="../img/s3.jpg" alt="Computer Lab">
+    </div>
 
-    <footer>
-        <p>&copy; Tangail Polytechnic Institute 2023</p>
-    </footer>
+    <hr>
+    <div style="text-align: center;">
+        <h1>Teacher's of this Technology</h1>
+
+    </div>
+    <div id="main" class="clearfix">
+
+        <div class="tabs">
+        </div>
+
+        <div class="accessibilityDesign" id="accessibilityDesign" title="Font Color &amp; Size Changing Option"
+            style="background-color:#405DA9;">
+
+        </div>
+        <div class="pull-right print"><a href="/print/teacher-list/3" target="_blank"><span
+                    class="glyphicon glyphicon-print"></span></a> </div>
+
+        <div class="region region-content">
+            <div id="block-system-main" class="block block-system clearfix">
+
+
+                <div class="content">
+                    <div class="view-content">
+                        <iframe frameborder="0" src="https://rg-bd.com/tpi-teacher-list.php?t=1&amp;id=1"
+                            style="width:100%; height:2000px;"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+    </div>
+
 
 </body>
 
