--- a/public/home/home.html
+++ b/public/home/home.html
@@ -6,24 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tangail Polytechnic Institute</title>
     <link rel="stylesheet" href="./home/style.css">
+    <link rel="stylesheet" href="../tpi/css/nav.css">
 </head>
 
 <body>
-
-
-
-    <nav class="navbar">
-        <a href="#" class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a>
-        <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="../../tpi/pages/about.html">About</a></li>
-            <li><a href="#">Electrical</a></li>
-            <li><a href="#">Civil</a></li>
-            <li><a href="#">Mechanical</a></li>
-            <li><a href="#">Construction</a></li>
-            <li><a href="#">Telecommunication</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+    <nav>
+        <a class="nav-logo"><img src="../../tpi/images/tpi.jpg" alt="Logo" height="55" width="55"></a>
+        <a href="../../tpi/pages/about.html">About</a>
+        <a href="#">Electrical</a>
+        <a href="#">Civil</a>
+        <a href="#">Mechanical</a>
+        <a href="#">Construction</a>
+        <a href="#">Telecommunication</a>
+        <a href="../cst/pages/cst.html">CST</a>
+        <a href="#">Contact</a>
+        <a href="../tpi/pages/teachersInfo.html">Teachers</a>
+        <a href="../tpi/pages/students.html">students</a>
     </nav>
 
     <div class="container">
@@ -60,6 +58,7 @@
                         <li>Mechanical Engineering Technology</li>
                         <li>Computer Technology</li>
                         <li>Electronics Technology</li>
+                        <li>Construction Technology</li>
                     </ul>
                 </section>
 
@@ -79,21 +78,33 @@
                     </p>
                 </section>
 
-                <section class="contact" style="text-align: center;">
-
-                    <h2 class="bg-text">Contact Us</h2>
-
-                    <hr>
-                    <br>
-                    <p>Tangail Polytechnic Institute<br>
-                        0.6 kilometers (0.37 mi) north of Tangail center new bus terminal<br>
-                        Eastern side of Tangail - Mymensingh road<br>
-                        Tangail, Bangladesh<br>
-                        Phone: +880-2-9123-4567<br>
-                        Email: info@tpi.edu.bd</p>
-                </section>
             </main>
         </div>
+    </div>
+    <br>
+    <h1 class="bg-text" style="color: white;">Location of Tangail Polytechnic Institute</h1>
+    <br>
+    <div style="text-align: center;">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3120.84083556367!2d89.91830427713107!3d24.275524099999988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fdfbd757d45253%3A0x908290688169baf7!2sTangail%20Polytechnic%20Institute%2CTangail!5e1!3m2!1sen!2sbd!4v1700115617546!5m2!1sen!2sbd"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <br>
+    <div style="text-align: center;">
+        <section class="contact" style="text-align: center;">
+
+            <h1 class="bg-text" style="color: white;">Contact Us</h1>
+
+            <hr>
+            <br>
+            <p>Tangail Polytechnic Institute<br>
+                0.6 kilometers (0.37 mi) north of Tangail center new bus terminal<br>
+                Eastern side of Tangail - Mymensingh road<br>
+                Tangail, Bangladesh<br>
+                Phone: +880-2-9123-4567<br>
+                Email: info@tpi.edu.bd</p>
+        </section>
     </div>
     <div style="text-align: center;">
         <br>
