--- a/public/tpi/pages/about.html
+++ b/public/tpi/pages/about.html
@@ -8,44 +8,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../../tpi/css/nav.css">
 </head>
 
 <body>
+    <nav>
+        <a href="../../home/home.html">Home</a>
+        <a href="../../tpi/pages/teachersInfo.html">Teachers Information</a>
+        <a href="#">Contact</a>
+    </nav>
+    <br>
     <div id="main" class="clearfix">
-
-
-
-
-
-        <!-- EOF:#content-wrapper -->
         <div id="content-wrapper">
-
             <h1 class="page-title">About Us</h1>
-
-
-            <!-- #tabs -->
             <div class="tabs">
             </div>
-            <!-- EOF: #tabs -->
-
-            <!-- #action links -->
-
             <div class="pull-right print"><a href="/print/node/2" target="_blank"><span
                         class="glyphicon glyphicon-print"></span></a> </div>
-
             <div class="region region-content">
                 <div id="block-system-main" class="block block-system clearfix">
-
-
                     <div class="content">
                         <article id="node-2" class="node node-page en clearfix" about="/about-us"
                             typeof="foaf:Document">
-
                             <header>
                                 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
                                 <span property="dc:title" content="About Us" class="rdf-meta element-hidden"></span>
                             </header>
-
                             <div class="content">
                                 <div class="field field-name-body field-type-text-with-summary field-label-hidden">
                                     <div class="field-items">
@@ -190,20 +178,24 @@
                                     </div>
                                 </div>
                             </div>
-
-
-
-
-
                         </article>
                     </div>
                 </div>
             </div>
 
         </div>
-        <!-- EOF:#content-wrapper -->
 
     </div>
+    <br>
+    <h1 class="bg-text" style="color: black; text-align: center;">Location of Tangail Polytechnic Institute</h1>
+    <br>
+    <div style="text-align: center;">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3120.84083556367!2d89.91830427713107!3d24.275524099999988!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fdfbd757d45253%3A0x908290688169baf7!2sTangail%20Polytechnic%20Institute%2CTangail!5e1!3m2!1sen!2sbd!4v1700115617546!5m2!1sen!2sbd"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <br>
 </body>
 
 </html>
