Done CST deperment

--- a/public/tpi/pages/students.html
+++ b/public/tpi/pages/students.html
@@ -17,9 +17,9 @@
         <a href="#">Civil</a>
         <a href="#">Mechanical</a>
         <a href="#">Construction</a>
-        <a href="../cst/pages/cst.html">CST</a>
+        <a href="../../cst/pages/cst.html">CST</a>
         <a href="#">Telecommunication</a>
-        <a href="../tpi/pages/teachersInfo.html">Teachers</a>
+        <a href="../../tpi/pages/teachersInfo.html">Teachers</a>
 
 
     </nav>
