--- a/public/home/home.html
+++ b/public/home/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tangail Polytechnic Institute</title>
-    <link rel="stylesheet" href="./home/style.css">
+    <link rel="stylesheet" href="/home/style.css">
     <link rel="stylesheet" href="../tpi/css/nav.css">
 </head>
 
